# sim-agents

./: .gitignore  CLAUDE.md  DECISIONS.md  FAILURES.md  PROGRESS.md  backlog.json  feature_list.json  pyproject.toml
src/sim_agents/: __init__.py  cli.py  orchestrator.py
src/sim_agents/agents/: __init__.py  notes.py  project_runner.py  qa_checker.py  researcher.py  task_assigner.py  task_creator.py  verifier.py  worker.py
src/sim_agents/coordination/: __init__.py  locking.py  state.py  stigmergy.py
src/sim_agents/memory/: __init__.py
src/sim_agents/notifications/: __init__.py
src/sim_agents/safety/: __init__.py
src/sim_agents/templates/: __init__.py
tests/: test_cli.py  test_locking.py  test_notes.py  test_orchestrator.py  test_project_runner.py  test_qa_checker.py  test_researcher.py  test_state.py  test_stigmergy.py  test_task_assigner.py  test_task_creator.py  test_verifier.py  test_worker.py
