[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-agents"
dynamic = ["version"]
description = "SIM (Stigmergic-Immune Morphogenetic) architecture for perpetual autonomous multi-agent software development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SIM Agents Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "anthropic>=0.40.0",
    "crewai>=0.80.0",
    "upstash-redis>=1.0.0",
    "agentfuse-runtime>=0.1.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "watchdog>=4.0.0",
    "aiofiles>=24.0.0",
    "aiohttp>=3.10.0",
    "tiktoken>=0.7.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "slack-sdk>=3.30.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "black>=24.0.0",
    "radon>=6.0.0",
    "bandit>=1.7.0",
]
build = [
    "build>=1.2.0",
    "twine>=5.0.0",
    "setuptools-scm>=8.0",
]

[project.scripts]
sim-agents = "sim_agents.cli:main"

[tool.setuptools-scm]
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (Redis, etc.)",
    "slow: marks tests that take a long time to run",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "agentfuse_runtime.*",
    "upstash_redis.*",
    "langchain.*",
    "langchain_anthropic.*",
    "langgraph.*",
    "watchdog.*",
    "aiofiles.*",
    "tiktoken.*",
    "slack_sdk.*",
    "telegram.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["sim_agents"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
